Otherwise, this branch is only for bug-fixes.


Overview of Changes in Glimpse 0.1.3
====================================
* Resolved an upstream bug that caused Glimpse Image Editor to crash on GNOME 3.36
* Updated the GNOME platform version our Flatpak uses to 3.36
* Uplifted BABL version from 0.1.68 to 0.1.74
* Uplifted GEGL version from 0.4.16 to 0.4.22
* TO BE DETERMINED - Still in development


Overview of Changes in Glimpse 0.1.2
====================================

* Updated translation files so they use the correct program name more often
* Glimpse and GNU I.M.P windows no longer group on same Windows taskbar icon
* Fixed copyright year, versions, and AUTHORS list (now standard practice)
* Moved "Sponsor Contributors" list to this file so they are still preserved
* Moved build/ folder to build-aux/ so that we follow GNOME conventions
* Fixed `make dist` to assist Linux and BSD distribution package maintainers
* Fixed "legacy" UI theme in Snapcraft packages
* Reinstated the "Color" icon theme
* Reinstated the "Legacy" UI theme
* Added foreign language translations to the Windows installer
* Refactored UI translation of "Gimpressionist" to "Impressionist"
* Fixed branding in the text editor color picker
* Updated `make check` to provide more verbose output for Flatpak validation
* Revamped how upstream maintainers are credited
* Displays recent upstream contributors through the UI

Overview of Changes from GNU Image Manipulation Program to Glimpse 0.1.0
========================================================================

Graphical User Interface:
* Translation files, code & build files updated so "Glimpse" is displayed
throughout the UI, executables and packages
* Changed the default UI behaviour for a cleaner/more professional look
* Replaced application logo and window/taskbar icons
* Replaced "wilber eek" logo with a new application logo
* Replaced initial splash screen
* Updated upstream icon themes to include our own iconography