@@ -3,20 +3,25 @@
 Glimpse is a downstream fork of the GNU Image Manipulation Program. You can find out more information on our FAQs page: https://glimpse-editor.org/about/
 
 ## What is different about Glimpse?
-Aside from the rebrand that provides excellent free software with a less problematic name, we also focus on performance improvements, user interface changes and incrementally improving the user experience.
+The GNU Image Manipulation Program is primarily intended for long-standing Linux enthusiasts and power users. We have rebranded and repackaged it for a wider audience, and we intend to make it much easier to deploy across schools, university campuses and workplaces. As the project develops we intend to focus on performance improvements, user interface changes and incrementally improving the user experience.
 
-In the longer term we intend to write our own GUI and plug-in framework on top of the [GEGL](https://en.wikipedia.org/wiki/GEGL) component maintained by the same developers, but it will likely take years for those aspirations to be fully realised.
+Glimpse Image Editor is a derivative work based on the GNU Image Manipulation Program source code, and it is shared under the terms of the GNU General Public License version 3.
+
+Recent changes include:
+* A more professional name, icon and GUI
+* A completely new Windows installer developed with the WiX Toolset
+* Improved support for Flathub and Snapcraft
+* Much better documentation and supporting tools for building and packaging the source code
+* Fork-specific changes like crediting upstream contributions separately, updating the build systems/translation files/icon packs, etc.
 
 ## How will the package versions work?
 Glimpse 0.x releases are based on GNU Image Manipulation Program 2.10.x releases and are intended to provide a minimum viable product. They also help us build our project infrastructure, learn the codebase and iterate towards a fully supportable product.
 
 You can see how this effort is going in the [dev-g210](https://github.com/glimpse-editor/Glimpse/tree/dev-g210) branch.
 
-Glimpse 1.x releases will also be based on GNU Image Manipulation Program 3.0.x releases. Ideally we aim to have good supporting documentation and help files by that stage.
+Glimpse 1.x releases will be based on GNU Image Manipulation Program 3.x releases.
 
-Glimpse 2.x releases will utilise a new GUI that follows the [GNOME Human Interface Guidelines](https://developer.gnome.org/hig/stable/) and our own leaner plug-in framework.
-
-We do not work to fixed timelines. Instead we select a month we want to aim for, and if the release needs more time then we update our schedule accordingly.
+We also have a working group designing a completely new image editing program, but it will be quite a number of years before that effort comes to fruition.
 
 ## How can I keep up to date with Glimpse's progress?
 Our official project website is now live at https://glimpse-editor.org.
