@@ -6,11 +6,13 @@ Vagrant.configure("2") do |config|
   config.ssh.forward_x11 = true
 
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "1024"
+    vb.memory = "2048"
     vb.cpus = 2
   end
 
+  config.vm.synced_folder "../..", "/vagrant"
+
   config.vm.provision "ansible_local" do |ansible|
-    ansible.playbook = "glimpse-vagrant.yml"
+    ansible.playbook = "build-aux/vagrant/deploy.yml"
   end
 end
