@@ -1,5 +1,5 @@
 ---
-- name: Provision Vagrant
+- name: Provision Glimpse Build Environment
   hosts: all
   become: yes
   become_user: root
@@ -69,6 +69,38 @@
         - gnome-icon-theme
         - llvm
 
+    - name: Install extra packages recommended by upstream docs
+      apt:
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - libtool
+        - gjs
+        - gtk-3-examples
+        - jasper
+        - libaa1-dev
+        - libappstream-glib-dev
+        - libarchive-dev
+        - libavcodec-dev
+        - libavformat-dev
+        - libavutil-dev
+        - libgtk-3-dev
+        - gobject-introspection
+        - libgudev-1.0-dev
+        - liblcms2-dev
+        - liblensfun-dev
+        - librsvg2-bin
+        - libsdl2-dev
+        - libswscale-dev
+        - libv4l-dev
+        - libwebkit2gtk-4.0-dev
+        - luajit
+        - python-gi-dev
+        - python3-venv
+        - ruby
+        - w3m
+        - xsltproc
+
     - name: Install meson dependencies for the BABL build
       apt:
         name: "{{ packages }}"
@@ -82,3 +114,4 @@
 
     - name: Install meson pip dependencies for the BABL build
       shell: pip3 install meson
+
