@@ -14,6 +14,10 @@ Overview of Changes in Glimpse 0.1.3
 * Updated the GNOME platform version our Flatpak uses to 3.36
 * Uplifted BABL version from 0.1.68 to 0.1.74
 * Uplifted GEGL version from 0.4.16 to 0.4.22
+* Updated `HACKING` and GEGL/BABL build jobs to use new `meson` build process
+* Moved Vagrant support files into a dedicated folder in `build-aux` directory
+* Updated Vagrant build process to use 2GB RAM, 2 CPUs and new `meson` builds
+* Updated the `README.MD` file with more current information
 * TO BE DETERMINED - Still in development
 
 
